# gpu-screen-recorder-qt

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  com.dec05eba.gpu_screen_recorder.desktop
src/: config.hpp  global_shortcuts.cpp  global_shortcuts.h  main.cpp
